# TimeSyncServer

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  docker_push  tssd.service  tssd.service.in  tssd.service.template
.github/workflows/: docker-publish.yml
src/: main.cpp
